2597.美丽子集的数目 [状态] 完成 [优化] 使用二分查找快速定位绝对差不等于k的数字